--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -13,13 +13,15 @@ html, body {
     display: table;
     height: 100%;
     width: 100%;
+    
 }
 
 #loginContainer * {
-    color: #fff;
+  
     font-family: 'Helvwtica Neue', "Helvetica", "Arial", sans-serif;
     line-height: 1em;
     box-sizing: border-box;
+    color: #fff;
 }
 
 #loginContainer {
@@ -59,6 +61,7 @@ html, body {
 }
 
 #inputContainer h2 {
+    font-size: 28px;
     text-align: center;
 }
 
@@ -73,8 +76,9 @@ html, body {
 }
 
 #inputContainer label {
+    display: block;
     color: #fff;
-    font-size: 13px;
+    font-size: 16px;
     margin-top: 15px;
 }
 
@@ -117,7 +121,7 @@ html, body {
 }
 
 #loginText h2 {
-    margin: 35px 0;
+    margin: 30px 0;
     font-weight: normal;
 }
 
@@ -131,4 +135,11 @@ html, body {
     list-style-type: none;
     padding: 5px 30px;
     background: url('../images/icons/checkmark.png') no-repeat; 
+}
+
+#inputContainer .errorMessage {
+    color: #07d159;
+    font-size: 12px;
+    display: block;
+    font-weight: bold;
 }
