--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ body {
     min-width: 720px;
 }
 
+
 #nowPlayingBarContainer {
 	width: 100%;
     background-color: #282828;
@@ -197,6 +198,7 @@ body {
 .navItemLink {
     color: #a0a0a0;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .navItemLink:hover {
