--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -394,7 +394,7 @@ body {
     margin-bottom: 20px;
 }
 
-.tracklistContainer h2, .gridViewContainer h2 {
+.tracklistContainer h2, .gridViewContainer h2, .artistContainer h2 {
     text-align: center;
 }
 
@@ -402,3 +402,43 @@ body {
     cursor: pointer;
 }
 
+.searchContainer {
+    background: #242424;
+    padding: 20px 28px;
+}
+
+.searchContainer h4 {
+    margin: 0;
+    font-weight: 300;
+}
+
+.searchContainer .searchInput {
+    width: 100%;
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    font-weight: 700;
+    font-size: 62px;
+    letter-spacing: 2px;
+}
+
+input:focus {
+    outline: none;
+}
+
+.searchResultRow {
+    padding: 15px 10px;
+}
+
+.searchResultRow:hover {
+    background-color: #282828;
+}
+
+.searchResultRow .artistName span {
+    color: #fff;
+}
+
+.noResults {
+    display: block;
+    margin: 15px;
+}
