--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -507,3 +507,23 @@ input:focus {
     -moz-appearance:    none;
     appearance:         none;
 } 
+
+.settingsButton {
+    min-width: 130px;
+    color: #fff;
+    background: transparent;
+    letter-spacing: 2;
+    font-weight: 700;
+    margin-bottom: 10px;;
+    padding: 15px 10px;
+    text-align: center;
+    border: 2px solid #fff;
+    border-radius: 20px;
+    cursor: pointer;
+    display: block;
+    margin: 0 auto 20px auto;
+}
+
+.userInfo {
+    text-align: center;
+}
